# ECE540-FinalProj

./: .gitignore  CMakeLists.txt  README.md  breadboard_pinout.txt  test_ts_rpi5.c  test_ts_rpi5.py
Deliverables/: model.c  rvfpganexys.sv  rvfpganexys.xdc  simple_spi_top.v  tshw_bitbang_withFSM_new.bit  veerwolf_core.v
Deliverables/custom-gpio-protocol/: protocol.txt
RVfpga_NexysA7-DDR/src/: constraints.xdc  i2c_test.bit  rvfpganexys.sv  rvfpganexys.xdc  test_ts.c
RVfpga_NexysA7-DDR/src/OtherSources/: constraints.xdc
RVfpga_NexysA7-DDR/src/VeeRwolf/: veerwolf_core.v
RVfpga_NexysA7-DDR/src/VeeRwolf/Peripherals/ts_i2c/: i2c_master.v  wb_i2c_ts.v
src/FPGA_src/: i2c_wrapper.v  poll_ts_i2c.c  readme.txt  touchscreen_hw.bit  touchscreen_hw_final.bit  touchscreen_hw_spi_i2c.bit
src/FPGA_src/RVfpga_NexysA7-DDR/src/: constraints.xdc  i2c_test2.bit  rvfpganexys.xdc  test_ts.c
src/FPGA_src/wb_intercon-1250154467e4a5658043f4be3945fc15a7808551/sw/: config.yml  wb_intercon.vh
src/RPI5/: protocol.txt  rpi5_code_for_ts.py  tshw_bitbang.bit
src/c_src/: hw_test.c  main.c
src/c_src/emnist_model/: model.c  model.h  model_test_main.c
src/python_src/: emnist.py  model_tester.py  readme.md  requirements.txt  test0.h  test7.h  test8.h  test_array_gen.py  test_digit.h  test_img_to_bin.py  weights_header_generator.py
src/python_src/weight_files/: emnist_model.json  emnist_weights.npz  emnist_weights.weights.h5  label_names.json
test_scripts/: test_ts_rpi5.c  test_ts_rpi5.py
wb_intercon-1250154467e4a5658043f4be3945fc15a7808551/sw/: config.yml  wb_intercon.v
(+11 files in other folders)
